@@ -1,3 +1,9 @@
+2002-10-03  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSRunLoop.m: ([-runMode:beforeDate:]) permit the use of a
+	nil date and document it.  This is the behavior MacOS seems to have
+	and seems to be more useful than prohibiting nil dates.
+
 2002-10-02  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSDistributedLock.m: Document and tidy.
